# RustberryShips

./: Cargo.toml  LICENSE  README.md  basic_2d.fragshader  basic_2d.vertexshader  build.rs  test-thing.txt
evidencehihi/: git_setup.md  rust_evidence.md  teamwork_evidence.md
lib/rustberry-ecs/: Cargo.toml
lib/rustberry-ecs/rustberry-ecs-derive/: .gitignore  Cargo.toml
lib/rustberry-ecs/rustberry-ecs-derive/src/: lib.rs
lib/rustberry-ecs/src/: lib.rs
resources/models/: Low_poly_rusty_tank.mtl  MERKAVA_MK4.obj.mtl
resources/shaders/: basic_2d.fragshader  basic_2d.vertexshader  debug_draw.fragshader  debug_draw.vertexshader
src/: engine_content.rs  engine_resources.rs  entity_manager.rs  input_system.rs  main.rs  model_loader.rs  resource_manager.rs  system_manager.rs  window.rs
src/game_content/: components.rs  mod.rs  systems.rs
src/renderer/: mod.rs
src/rendering/: debug_draw.rs  mod.rs  opengl_renderer.rs
