[package]
name = "rustberry_ships"
version = "0.1.0"
authors = ["FireFlyForLife <maiko.s.99@gmail.com>", "Simon Renger <info@simonrenger.de>"]
build = "build.rs"

[dependencies]
cgmath = "0.16.1"
recs = "2.0.1"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"

[build-dependencies]
gl_generator = "0.5.0"

