[package]
name = "rustberry_ships"
version = "0.1.0"
authors = ["FireFlyForLife <maiko.s.99@gmail.com>", "Simon Renger <info@simonrenger.de>"]
build = "build.rs"

[dependencies]
num = "0.1.36"
cgmath = "0.16.1"
recs = "2.0.1"
tobj = "0.1.6"
rustberry_ecs = {path = "./lib/rustberry-ecs"}
rustberry_ecs_derive = {path = "./lib/rustberry-ecs/rustberry-ecs-derive"}

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"

[build-dependencies]
gl_generator = "0.5.0"
